<resources>
    <string name="app_name">WalBiz</string>
    <string name="welcome" translatable="false">Welcome to WalBiz!</string>
    <string name="welcome_greeting" translatable="false">\"Empowering Local Businesses\"</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="signin_greeting">Sign in to WalBiz!</string>v
    <string name="email" translatable="false">E-mail</string>
    <string name="email_hint">Your E-Mail</string>
    <string name="registrasi_duplicate">Email has been registered</string>
    <string name="pass">Password</string>
    <string name="pass_hint">Your Password</string>
    <string name="signin">Sign in</string>
    <string name="signupchoices">or sign in with e-mail</string>
    <string name="signinWithGoogle">Sign in with Google</string>
    <string name="sign_google">- or sign in with Google -</string>
    <string name="name" translatable="false">Faradina Fachrizal</string>
    <string name="username" translatable="false">\@faraarizal</string>
    <string name="value_email" translatable="false">example\@gmail.com</string>
    <string name="language">Language</string>
    <string name="article_title" translatable="false">Franchise Boom: Entrepreneurs Flock to Proven Business Models</string>
    <string name="article_desc" translatable="false">likely discusses the current trend of entrepreneurs increasingly opting for...</string>
    <string name="article" translatable="false">Article</string>
    <string name="author_name">Author Name</string>
    <string name="date_post" translatable="false">14 November 2023</string>
    <string name="content_article" translatable="false">The news article "Franchise Boom: Entrepreneurs Flock to Proven Business Models" likely discusses the current trend of entrepreneurs increasingly opting for franchise opportunities. The theme suggests that entrepreneurs are attracted to the reliability and success of established business models offered by franchises. The article might delve into the reasons behind this surge in interest, exploring factors such as the appeal of proven systems, reduced business risks, and the potential for quicker returns on investment within the franchise sector.
        Additionally, it could highlight notable success stories and provide insights into the factors contributing to the growth of franchising in the business landscape.</string>
    <string name="source">Source:</string>
    <string name="link_source" translatable="false">Link.com/path/path.path.path</string>

<!--    Register-->
    <string name="register_page_title">Sign up to WalBiz!</string>
    <string name="title_form_confirm_password">Confirm Password</string>
    <string name="signup_button">Sign up</string>
    <string name="title_form_name">Name</string>
    <string name="form_name">Your Name</string>
    <string name="reg_success">Register Success</string>
    <string name="reg_failed">Register Failed</string>
    <string name="login_failed">Login Failed</string>
    <string name="error_401">The data is inaccurate. Double check your Email or Password</string>
    <string name="error_400">Please complete the input before continuing</string>
    <string name="searchbar">Search article</string>
    <string name="text_null">no found data</string>
    <string name="exit_message">Are you sure want to exit from aplication?</string>
    <string name="logout_cancel">Cancel</string>

    <!-- On Boarding   -->
    <string name="title_onBoarding_1">As You Like</string>
    <string name="description_onBoarding_1">WalBiz helps you find your desired franchise as your heart said 🫶🏻</string>
    <string name="title_onBoarding_2">As Your Budget</string>
    <string name="description_onBoarding_2">Adjust to your budget, best profit as you expected</string>
    <string name="title_onBoarding_3">As your Wish</string>
    <string name="description_onBoarding_3">Make your franchises wishlist, go business with the fizz</string>
    <string name="button_signup_now">Sign up now!</string>


    <!--  Franchise Page  -->
    <string name="card_title">Recomendation</string>
    <string name="card_description">Get your franchises recommendation according to your preferences!</string>
    <string name="page_title">Franchise</string>

    <!--  Detail Franchise  -->
    <string name="description_franchise">Pizza Hut franchise is a business opportunity that allows individuals or groups to own and operate a Pizza Hut restaurant outlet using the brand, operational system, and support provided by Pizza Hut as the franchisor. Pizza Hut is known as one of the leading pizza brands globally with a diverse menu, including pizzas, pasta, vegetables, and other dishes.</string>
    <string name="name_franchise" translatable="false">Pizza Hut</string>
    <string name="category_franchise_title">Franchise Category</string>
    <string name="category_franchise">Food and Baverage</string>
    <string name="type_franchise_title">Franchise Type</string>
    <string name="type_franchise">Franchise</string>
    <string name="cost_franchise_title">Cost</string>
    <string name="cost_franchise" translatable="false">Rp.1.000.000</string>
    <string name="outlet_franchise_title">Total Oulet</string>
    <string name="outlet_franchise" translatable="false">100</string>
    <string name="company_franchise_title">Company Name</string>
    <string name="company_franchise">Akila Dental, PT</string>
    <string name="website_franchise_title">Website</string>
    <string name="website_franchise" translatable="false">alfamart.co.id</string>
    <string name="phone_franchise_title">Phone Number</string>
    <string name="phone_franchise" translatable="false">081228934844</string>
    <string name="email_franchise_title">Email</string>
    <string name="email_franchise" translatable="false">alfamart@mail.co.id</string>
    <string name="est_franchise_title" translatable="false">Established</string>
    <string name="est_franchise" translatable="false">2020</string>
    <string name="profit_franchise_title">Net Profit Per Month</string>
    <string name="profit_franchise" translatable="false">Rp. 5.000.000</string>
    <string name="location_franchise_title">Company Address</string>
    <string name="location_franchise" translatable="false">Jl. Mayor Sunaryo, Klaten</string>
    <string name="turn_of_invesment_title">Turn of Invesment</string>
    <string name="turn_of_investment" translatable="false">40%</string>
    <string name="wish_button">Wish</string>
    <string name="percent" translatable="false">%s%%</string>
    <string name="rp" translatable="false">Rp. %s</string>

    <!--  Recomendation  -->
    <string name="recomendation">Recomendation</string>
    <string name="title_form_category">What recommendations can we provide?</string>
    <string name="context_form_category">Culinary business recommendations</string>
    <string name="add_recomendation_button">Get Recomendation</string>
    <string name="recomendation_for_you">Recomendation for you</string>

    <!--  Wishlist  -->
    <string name="wishlist_title" translatable="false">Wishlist</string>
    <string name="detail_article">Detail Article</string>
    <string name="profile">Profile</string>
    <string name="logout_confirm">Logout Confirmation</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_profile">Account</string>
    <string name="title_article">Article</string>

    <!-- Home  -->
    <string name="home" translatable="false">Home</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username_home" translatable="false">Dzaky Zaidan</string>


    <!--  Fracnhise menu  -->
    <string name="franchise" translatable="false">Franchise</string>
    <string name="error_internet" translatable="false"><![CDATA[<![CDATA[>There is a problem with the network connection. Please check your internet connection]]]]></string>
    <string name="error" translatable="false">Error:</string>
    <string name="unauthorized">Invalid access. Please log in again.</string>

    <!--  Wishlist Menu  -->
    <string name="wishlist" translatable="false">Wishlist</string>
    <string name="empty_image_warning">Please upload an image file first</string>
    <string name="invalid_image_format_warning">invalid image format</string>
</resources>