<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_menu">

    <fragment
        android:id="@+id/home_menu"
        android:name="com.example.capstone.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/article_menu"
        android:name="com.example.capstone.view.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/profile_menu"
        android:name="com.example.capstone.view.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/franchise_menu"
        android:name="com.example.capstone.view.franchise.FranchiseFragment"
        android:label="@string/franchise"
        tools:layout="@layout/fragment_franchise"/>

    <fragment
        android:id="@+id/wishlist_menu"
        android:name="com.example.capstone.view.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist"/>


</navigation>