<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.article.ArticleActivity">


    <TextView
        android:id="@+id/article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:text="@string/article"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article"
        app:srcCompat="@drawable/article" />

    <TextView
        android:id="@+id/tv_name_article"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/outfit_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="@string/article_title" />

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/author_name"
        android:fontFamily="@font/inter_bold"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_name_article"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_article" />

    <TextView
        android:id="@+id/article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date_post"
        android:fontFamily="@font/inter_reguler"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_author_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_name" />

    <TextView
        android:id="@+id/artice_content"
        android:layout_width="338dp"
        android:layout_height="198dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/inter_reguler"
        android:text="@string/content_article"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/article_date"
        app:layout_constraintTop_toBottomOf="@+id/article_date" />

    <TextView
        android:id="@+id/source_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/source"
        android:fontFamily="@font/inter_bold"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/artice_content"
        app:layout_constraintTop_toBottomOf="@+id/artice_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/link_source"
        android:fontFamily="@font/inter_reguler"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/source_article"
        app:layout_constraintTop_toBottomOf="@+id/source_article" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="14dp"
        android:layout_height="15dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>