<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.article.DetailArticleActivity">


<!--    <TextView-->
<!--        android:id="@+id/article"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="-3dp"-->
<!--        android:text="@string/article"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView4"-->
<!--        app:layout_constraintStart_toEndOf="@+id/imageView4"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imageView4" />-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/article" />

    <TextView
        android:id="@+id/tv_name_article"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/outfit_semibold"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="@string/article_title" />

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/author_name"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name_article"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_article" />

    <TextView
        android:id="@+id/article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_reguler"
        android:text="@string/date_post"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/tv_author_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_name" />

    <TextView
        android:id="@+id/artice_content"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_reguler"
        android:justificationMode="inter_word"
        android:text="@string/content_article"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_article"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/article_date"
        app:layout_constraintTop_toBottomOf="@+id/article_date" />

    <TextView
        android:id="@+id/source_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/source"
        android:fontFamily="@font/inter_bold"
        android:textSize="13sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/artice_content"
        app:layout_constraintTop_toBottomOf="@+id/artice_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_reguler"
        android:text="@string/link_source"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/source_article"
        app:layout_constraintTop_toBottomOf="@+id/source_article" />


</androidx.constraintlayout.widget.ConstraintLayout>